"fixing the alignment"

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,6 @@
 
 .App h1{
   color: white;
-  text-align: center;
   margin-bottom: 10px;
   font-family: 'Times New Roman', Times, serif;
 }
